[gd_scene load_steps=17 format=3 uid="uid://buwqvgpn5goji"]

[ext_resource type="Texture2D" uid="uid://drp4rgs5bh252" path="res://Assets/brackeys/brackeys_platformer_assets/sprites/slime_green.png" id="1_bln8p"]
[ext_resource type="Script" uid="uid://bmlagkggs27oh" path="res://scripts/green_slime.gd" id="1_tuic5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tuic5"]
atlas = ExtResource("1_bln8p")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_io87k"]
atlas = ExtResource("1_bln8p")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q1p6"]
atlas = ExtResource("1_bln8p")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl2pm"]
atlas = ExtResource("1_bln8p")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q800"]
atlas = ExtResource("1_bln8p")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_35rgu"]
atlas = ExtResource("1_bln8p")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5vyh"]
atlas = ExtResource("1_bln8p")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_452or"]
atlas = ExtResource("1_bln8p")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pvn7"]
atlas = ExtResource("1_bln8p")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q1e0"]
atlas = ExtResource("1_bln8p")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_boo2g"]
atlas = ExtResource("1_bln8p")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq38r"]
atlas = ExtResource("1_bln8p")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_choun"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuic5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io87k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q1p6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl2pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q800")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35rgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5vyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_452or")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pvn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q1e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boo2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq38r")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya4ey"]
size = Vector2(6.75, 8.75)

[node name="GreenSlime" type="Area2D"]
collision_mask = 2
script = ExtResource("1_tuic5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_choun")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_ya4ey")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.622
one_shot = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 6)
rotation = -1.54727
target_position = Vector2(1.15246, 48.9864)
collision_mask = 2

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 6)
rotation = 1.58137
target_position = Vector2(0.528566, 49.9972)
collision_mask = 2

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(0, 6)
rotation = 1.58137
target_position = Vector2(6.99961, -0.0740143)

[node name="RayCastUp" type="RayCast2D" parent="."]
position = Vector2(10, 6)
rotation = 1.58137
target_position = Vector2(-48.7858, 20.517)
collision_mask = 2

[node name="RayCastUp2" type="RayCast2D" parent="."]
position = Vector2(-8, 6)
rotation = 1.58137
target_position = Vector2(-49.1876, -17.4809)
collision_mask = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
